# app_game_session

./: .gitattributes  .gitignore
backend/: .gitignore  Cargo.toml  todo.md
backend/src/: app.rs  docs.rs  main.rs  routes.rs
backend/src/domain/: game.rs  user.rs
backend/src/handlers/: debug_handler.rs  game_handler.rs  mod.rs  user_handler.rs
backend/src/services/: game_service.rs  mod.rs  user_service.rs
frontend/: .gitattributes  .gitignore  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  fetch-client.ts
frontend/src/app/style/: global.css
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  agents.md
frontend/src/features/games/: types.ts
frontend/src/features/games/hooks/: useGame.ts
frontend/src/features/games/services/: gameService.ts
frontend/src/features/users/hooks/: useUsers.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: ComponentShowcase.tsx  CreateGame.tsx  GameSession.tsx  UserList.tsx
frontend/src/style/: global.css
