[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.23.0", features = ["serde", "v4"] }
rand = "0.8.5"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
